--- a/css/styles.css
+++ b/css/styles.css
@@ -15,6 +15,8 @@ body {
   font-weight: 700;
   color: var(--accent-color);
   text-decoration: none;
+  font-size: 26px;
+  line-height: 1.17;
 }
 
 .hero-title {
@@ -22,6 +24,8 @@ body {
   font-weight: 900;
   color: var(--hero-text-color);
   background-color: grey;
+  font-size: 44px;
+  line-height: 1.36;
 }
 
 .nav-list {
@@ -31,12 +35,20 @@ body {
 .nav-link {
   text-decoration: none;
   color: var(--primary-text-color);
+  font-size: 14px;
+  line-height: 1.17;
 }
 
-.nav-link:hover {
+.nav-link:hover,
+.nav-link:focus {
   color: var(--accent-color);
 }
 
 .nav-link.contact {
-    color: ;
+  color: #757575;
+}
+
+.nav-link.contact:hover,
+.nav-link.contact:focus {
+  color: var(--accent-color);
 }
