--- a/css/styles.css
+++ b/css/styles.css
@@ -19,15 +19,6 @@ body {
   line-height: 1.17;
 }
 
-.hero-title {
-  font-family: roboto, sans-serif;
-  font-weight: 900;
-  color: var(--hero-text-color);
-  background-color: grey;
-  font-size: 44px;
-  line-height: 1.36;
-}
-
 .nav-list {
   list-style-type: none;
 }
@@ -51,4 +42,20 @@ body {
 .nav-link.contact:hover,
 .nav-link.contact:focus {
   color: var(--accent-color);
+}
+
+.hero-title {
+  font-family: roboto, sans-serif;
+  font-weight: 900;
+  color: var(--hero-text-color);
+  background-color: grey;
+  width: 500px;
+  font-size: 44px;
+  line-height: 1.36;
+}
+
+.btn {
+  cursor: pointer;
+  background-color: var(--accent-color);
+  color: #FFFFFF;
 }
