--- a/css/styles.css
+++ b/css/styles.css
@@ -18,6 +18,7 @@ body {
   text-decoration: none;
   font-size: 26px;
   line-height: 1.17;
+  letter-spacing: 0.03em;
 }
 
 .nav-list {
@@ -29,6 +30,7 @@ body {
   color: var(--primary-text-color);
   font-size: 14px;
   line-height: 1.17;
+  letter-spacing: 0.02em;
 }
 
 .nav-link:hover,
@@ -45,20 +47,28 @@ body {
   color: var(--accent-color);
 }
 
+.hero {
+  background-color: #2f303a;
+}
+
 .hero-title {
-  font-family: roboto, sans-serif;
   font-weight: 900;
   color: var(--hero-text-color);
-  background-color: grey;
-  width: 500px;
   font-size: 44px;
   line-height: 1.36;
+  text-align: center;
+  letter-spacing: 0.06em;
+  text-transform: uppercase;
 }
 
 .btn {
   cursor: pointer;
   background-color: var(--accent-color);
-  color: #FFFFFF;
+  color: #ffffff;
+  font-size: 16px;
+  font-weight: 700;
+  line-height: 1.88;
+  letter-spacing: 0.06em;
 }
 
 .features-list {
@@ -70,18 +80,21 @@ body {
   line-height: 1.17;
   font-size: 14px;
   text-transform: uppercase;
+  letter-spacing: 0.03em;
 }
 
 .features-text {
   color: var(--text-color);
   line-height: 1.71;
   font-size: 14px;
+  letter-spacing: 0.03em;
 }
 
 .examples-title {
   font-weight: var(--primary-font-weight);
   font-size: 36px;
   line-height: 1.17;
+  letter-spacing: 0.03em;
 }
 
 .examples-list {
@@ -92,6 +105,7 @@ body {
   font-weight: var(--primary-font-weight);
   font-size: 36px;
   line-height: 1.17;
+  letter-spacing: 0.03em;
 }
 
 .team-list {
@@ -102,10 +116,43 @@ body {
   font-weight: 500;
   font-size: 16px;
   line-height: 1.17;
+  text-align: center;
+  letter-spacing: 0.03em;
 }
 
 .team-list-text {
   font-size: 16px;
   line-height: 1.17;
   color: var(--text-color);
+  text-align: center;
+  letter-spacing: 0.03em;
+}
+
+.footer {
+  background-color: #2f303a;
+}
+
+.address {
+  font-size: 14px;
+  line-height: 1.71;
+  color: var(--hero-text-color);
+  font-style: normal;
+  letter-spacing: 0.03em;
+}
+
+.footer-list {
+  list-style-type: none;
+}
+
+.footer-link {
+  font-size: 14px;
+  line-height: 1.71;
+  letter-spacing: 0.03em;
+  color: rgba(255, 255, 255, 0.6);
+  letter-spacing: 0.03em;
+}
+
+.footer-link:hover,
+.footer-link:focus {
+  color: var(--accent-color);
 }
