--- a/css/styles.css
+++ b/css/styles.css
@@ -11,6 +11,8 @@ body {
   color: var(--primary-text-color);
 }
 
+/* Studio Styles */
+
 .logo {
   font-family: raleway, sans-serif;
   font-weight: 700;
@@ -31,6 +33,10 @@ body {
   font-size: 14px;
   line-height: 1.17;
   letter-spacing: 0.02em;
+}
+
+.current {
+  color: var(--accent-color);
 }
 
 .nav-link:hover,
@@ -155,4 +161,34 @@ body {
 .footer-link:hover,
 .footer-link:focus {
   color: var(--accent-color);
+}
+
+/* Portfolio Styles */
+
+.btn-portfolio {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.63;
+  letter-spacing: 0.03em;
+  cursor: pointer;
+}
+
+.btn-portfolio:hover,
+.btn-portfolio:focus {
+  color: var(--hero-text-color);
+  background-color: var(--accent-color);
+}
+
+.portfolio-title {
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 2;
+  letter-spacing: 0.06em;
+}
+
+.portfolio-text {
+  font-size: 16px;
+  line-height: 1.88;
+  letter-spacing: 0.03em;
+  color: var(--text-color);
 }
